--- a/config/database.yml
+++ b/config/database.yml
@@ -8,42 +8,65 @@
 #
 # And be sure to use new-style password hashing:
 #   http://dev.mysql.com/doc/refman/5.0/en/old-client.html
+# development:
+  # adapter: mysql2
+  # encoding: utf8
+  # reconnect: false
+  # database: db_aa
+  # pool: 5
+  # username: root
+  # password: root
+  # host: 127.0.0.1
+  # port: 8889
+  # socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+# 
+# # Warning: The database defined as "test" will be erased and
+# # re-generated from your development database when you run "rake".
+# # Do not set this db to the same as development or production.
+# test:
+  # adapter: mysql2
+  # encoding: utf8
+  # reconnect: false
+  # database: db_aa
+  # pool: 5
+  # username: root
+  # password: root
+  # host: 127.0.0.1
+  # port: 8889
+  # socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+# 
+# production:
+  # adapter: mysql2
+  # encoding: utf8
+  # reconnect: false
+  # database: db_aa
+  # pool: 5
+  # username: root
+  # password: root
+  # host: 127.0.0.1
+  # port: 8889
+  # socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+# 
 development:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: db_aa
+  adapter: sqlite3
+  database: db/development.sqlite3
   pool: 5
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 8889
-  socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+  timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: db_aa
+test: &test
+  adapter: sqlite3
+  database: db/test.sqlite3
   pool: 5
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 8889
-  socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+  timeout: 5000
 
 production:
-  adapter: mysql2
-  encoding: utf8
-  reconnect: false
-  database: db_aa
+  adapter: sqlite3
+  database: db/production.sqlite3
   pool: 5
-  username: root
-  password: root
-  host: 127.0.0.1
-  port: 8889
-  socket: '/Applications/MAMP/tmp/mysql/mysql.sock'
+  timeout: 5000
 
+cucumber:
+  <<: *test
